--- a/css/firts-screen-style.css
+++ b/css/firts-screen-style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=PT+Sans+Caption');
+@import url('https://fonts.googleapis.com/css?family=Comfortaa');
+@import url('https://fonts.googleapis.com/css?family=Exo+2');
 *{
     padding: 0;
     margin: 0;
