--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,31 +1,31 @@
 @media only screen and (max-width: 1023px) {
-    .home-main {
+    .images-main {
         -moz-column-count: 2;
         -webkit-column-count: 2;
         column-count: 2;
     }
 
-    .home-main {
+    .images-main {
         padding-right: 2.1em;
         margin: 1em 1.9em 3em 2em;
         border-right: 2px solid #234465;
 
     }
 
-    .home-section h1 {
+    .images-section h1 {
         padding: 5px;
         font-size: 2em;
         margin: 0.4em 0 0 2em;
     }
 }
 @media only screen and (max-width: 769px) {
-    .home-main {
+    .images-main {
         flex-basis: 100%;
         border-right:none ;
     }
 }
 @media only screen and (max-width: 640px) {
-    .home-main {
+    .images-main {
         -moz-column-count: 1;
         -webkit-column-count: 1;
         column-count: 1;
