--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ html {
     text-align: center;
     background: #eee;
     padding-top: 65px;
-    background: url("../images/IMG_405685.jpg") no-repeat fixed;
+    /* background: url("../images/IMG_405685.jpg") no-repeat fixed;*/
     position: relative;
     display: flex;
 }
@@ -92,7 +92,7 @@ html {
 /** ========= IMAGES SECTION style =========*/
 .images-section {
     text-align: center;
-    background: url("../images/IMG_405685.jpg") no-repeat fixed;
+    /* background: url("../images/IMG_405685.jpg") no-repeat fixed;*/
     display: flex;
     flex-wrap: wrap;
     padding-top: 65px;
@@ -337,22 +337,147 @@ html {
 /** ========= MIDDLE SECTION style =========*/
 .middle-section {
     height: 100%;
-    padding-top: 150px;
+    padding: 150px 0 0 0;
     text-align: center;
     background: #eee;
     padding: 65px;
-    background: url("../images/IMG_2.jpg") no-repeat fixed;
+    /*background: url("../images/IMG_2.jpg") no-repeat fixed;*/
     text-align: left;
+    text-align: center;
 }
-
+.middle-section *{
+    margin: 0;
+    padding: 0;
+}
 
 /** ========= CONTACT SECTION style =========*/
 .contact-section {
-    height: 100%;
-    padding-top: 150px;
+    padding-top: 30px;
     text-align: center;
+    display: flex;
+    flex-wrap: wrap;
     background: #fff;
-    background: url("../images/IMG_2.jpg") no-repeat fixed;
+    /*background: url("../images/IMG_2.jpg") no-repeat fixed;*/
+}
+
+.contact-main {
+    flex-basis: 70%;
+    margin: 2em 2.9em 5em 2em;
+    padding: 0;
+    padding-right: 3.1em;
+    border-right: 2px solid #234465;
+
+}
+
+.person {
+    width: 80%;
+    display: block;
+    padding: 0 0 2em 3em;
+    text-align: left;
+    border-bottom: 2px solid #234465;
+    border-bottom-left-radius: 100px;
+    margin-bottom: 5em;
+    position: relative;
+}
+
+.person img {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    display: inline-block;
+    margin-right: 3em;
+    box-shadow: 2px 2px 10px #888888;
+}
+
+.person-info {
+    display: inline-block;
+}
+
+.name {
+    margin: 0.2em;
+    font-size: 1.5em;
+    color: #234465;
+    font-family: Comfortaa, sans-serif;
+}
+
+.qualification {
+    margin: 0.2em;
+    font-size: 1em;
+    color: silver;
+}
+
+.mail {
+    font-size: 1em;
+    color: #3c5870;
+}
+
+.phone {
+    font-size: 1em;
+    color: #3c5870;
+}
+
+.person .social-links {
+    position: absolute;
+    padding-right: 2em;
+    bottom: 0;
+    right: 0;
+    display: inline-block;
+    margin: 0 auto;
+    background: linear-gradient(to left,rgba(35, 68, 101, 1), rgba(35, 68, 101, 1), rgba(255, 255, 255, 0));
+    border-top-right-radius: 3em;
+    width: 30%;
+    text-align: right;
+
+}
+
+.person .social-links li {
+    display: inline-block;
+    padding: 0.2em;
+    margin: 0 0.2em;
+    width: 2em;
+    height: 2em;
+    border-radius: 50%;
+    position: relative;
+}
+.person .social-links li a {
+    text-decoration: none;
+    color: white;
+    font-size: 1.4em;
+    color: white;
+
+}
+
+.person .social-links li .fa-twitter {
+    position: absolute;
+    top: 8px;
+    left: 9.8px;
+}
+
+.person .social-links li .fa-github {
+    position: absolute;
+    top: 8px;
+    left: 9.4px;
+}
+
+.person .social-links li .fa-facebook {
+    position: absolute;
+    top: 8px;
+    left: 13px;
+}
+
+
+.person .social-links li a:hover {
+    color:  rgba(255, 160, 0, 1);
+    -moz-transition:  color.3s ease-in-out;
+    -webkit-transition: color .3s ease-in-out;
+}
+
+/** === Images aside style ===*/
+.contact-aside {
+    flex-basis: 15%;
+    flex-grow: 1;
+    text-align: center;
+    margin-right: 10px;
 }
 
 /** ========= END SECTION style =========*/
@@ -361,6 +486,7 @@ html {
     text-align: center;
     background: #eee;
     display: flex;
+    flex-wrap: wrap;
     margin-bottom: 0;
 }
 
@@ -388,7 +514,7 @@ footer {
 
 .fa-chevron-up:hover {
     background: rgba(255, 160, 0, 0.7);
-    border-color:rgba(255, 160, 0, 0.0);
+    border-color: rgba(255, 160, 0, 0.0);
     -moz-transition: background .3s ease-in-out;
     -webkit-transition: background .3s ease-in-out;
     -moz-transition: border-color .3s ease-in-out;
@@ -424,6 +550,7 @@ footer {
     top: 8px;
     left: 9.8px;
 }
+
 .footer-up .social-links li .fa-github {
     position: absolute;
     top: 8px;
@@ -442,9 +569,11 @@ footer {
     font-size: 2em;
 
 }
-.footer-up .social-links li a:hover{
+
+.footer-up .social-links li a:hover {
     color: #3c5870;
 }
+
 .footer-navigation li {
     display: inline-block;
     margin: 1em;
